--- a/tittlesection/tittlesection.css
+++ b/tittlesection/tittlesection.css
@@ -1,13 +1,10 @@
 
-    h1 {
-        color: blue;
-    }
-    button:hover {
-        background-color: red;
-        cursor: pointer;
-        font-size: 20px;
+    :root {
+        --titleSectionPrimaryColor: #1a0035;
+        --titleSectionSecondaryColor:#9e8165;
     }
     #title{
+        color: var(--titleSectionPrimaryColor);
         text-align: center;
         width: 100%;
         padding: 200px;
@@ -15,3 +12,16 @@
         background-size: cover;
         background-position: center center;
     }
+    .tittlesectionButton{
+        color: var(--titleSectionPrimaryColor);
+        border: solid var(--titleSectionPrimaryColor) 1px;
+        border-radius: 5px;
+        padding: 15px 20px;
+        background-color: transparent;
+    }
+    .tittlesectionButton:hover {
+        background-color: var(--titleSectionPrimaryColor);
+        color: var(--titleSectionSecondaryColor);
+        cursor: pointer;
+    }
+
