--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -21,11 +21,11 @@
 .craps-table{
     width: var(--width-scale);
     height: var(--height-scale);
-    border: 2px solid red;
     margin: 0 auto;
     background-image: url('../images/craps-tabe2.jpg');
     background-size: cover;
     position: relative;
+    border-radius: 15px;
 }
 .craps-game-username-input{
     text-align: center;
@@ -59,7 +59,7 @@
     color: #1f0358;
     font-size: calc(var(--height-scale) * 0.05);
     font-weight: bolder;
-
+    padding-top: calc(var(--height-scale) * .008);
 }
 #crapsgame-main-section-money-stats{
     margin: 25px 0px 5px 0px;
@@ -67,15 +67,53 @@
     font-size: calc(var(--height-scale) * 0.05);
     margin-top: calc(var(--height-scale) * .055);
 }
+.craps-table-contianer{
+    margin-top: calc(var(--height-scale) * .17);
+    font-size: calc(var(--height-scale) * 0.045);
+    text-align: center;
+}
+.craps-roll-dice-container{
+    width: fit-content;
+    margin: auto;
+}
+.craps-roll-dice-container:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
 .craps-rounds-manager{
     position: absolute;
     bottom: 0;
-    border: 1px solid red;
     width: 100%;
     margin-top: calc(var(--height-scale) * .08);
     text-align: center;
     bottom: calc(var(--height-scale) * .04);
     color: #1f0358;
     font-weight: bolder;
+}
+.bets-grid{
+    display: grid;
+    grid-template-columns: 33% auto 33%;
+    width: 80%;
+    margin: 0 auto;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+.craps-bet-picker, .bet-amount{
+    padding: calc(var(--height-scale) * .009);
+}
+.craps-bet-picker:hover{
     cursor: pointer;
+    font-weight: bolder;
+}
+.bet-amount{
+    border-left: 2px solid white;
+    border-right: 2px solid white;
+    background-color: rgba(100, 100, 100, .5);
+}
+#craps-user-bet-amount{
+    margin: 0 calc(var(--height-scale) * .009);
+}
+.bet-change:hover{
+    cursor: pointer;
+    font-weight: bolder;
 }
