Added Newslinks components

--- a/personal-website/src/stockAnalysisDashboard/stockAnalysisDashboard.css
+++ b/personal-website/src/stockAnalysisDashboard/stockAnalysisDashboard.css
@@ -2,4 +2,5 @@
     background-image: url('../images/skyline.jpg');
     background-size: cover;
     background-position: center top;
+    height: 100%;
 }
